force-app/main/default/objects/Time_Card__c/fields/Full_Week__c.field-meta.xml
<CustomField>
    <fullName>Full_Week__c</fullName>
    <formula>IF(TEXT(Week_Start_Date__c) &lt;&gt; &apos;&apos;, TEXT(MONTH(Week_Start_Date__c ))+&quot;/&quot; +TEXT(DAY(Week_Start_Date__c ))+&quot;/&quot; +TEXT(YEAR(Week_Start_Date__c)) + &apos; - &apos; + TEXT(MONTH(Week_Start_Date__c+7))+&quot;/&quot; +TEXT(DAY(Week_Start_Date__c+7))+&quot;/&quot; +TEXT(YEAR(Week_Start_Date__c+7)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Week</label>
    <type>Text</type>
</CustomField>