force-app/main/default/objects/Time_Card__c/fields/Opp_Week_Start_Unique__c.field-meta.xml
<CustomField>
    <fullName>Opp_Week_Start_Unique__c</fullName>
    <label>Opp Week Start Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>