force-app/main/default/objects/Time_Card__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Time Cards</relationshipLabel>
    <relationshipName>Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>