force-app/main/default/objects/Time_Card__c/validationRules/Hours_Logged_Increment.validationRule-meta.xml
<ValidationRule>
    <fullName>Hours_Logged_Increment</fullName>
    <active>true</active>
    <errorConditionFormula>IF(MOD(  Hours_Logged__c * 100, 25 ) &lt;&gt; 0 , TRUE, FALSE )</errorConditionFormula>
    <errorDisplayField>Hours_Logged__c</errorDisplayField>
    <errorMessage>Enter Time in increments of .25</errorMessage>
</ValidationRule>